cahing things around

--- a/appinfo.json
+++ b/appinfo.json
@@ -1,7 +1,7 @@
 {
     "appKeys": {},
     "capabilities": [
-        ""
+        "configurable"
     ],
     "companyName": "Mrwhale",
     "longName": "light-controller",
