more app communication!
PebbleJs now can talk properly to pebble c and pebble c can understand what pebble js said (was casting it as the wrong type, bloody c) pebble js also storing data that was received from the settings page locally to retrieve later

--- a/appinfo.json
+++ b/appinfo.json
@@ -1,8 +1,9 @@
 {
     "appKeys": {
-	"KEY_IP": 0,
-	"KEY_PORT":1
-	},
+        "KEY_CMD": 2,
+        "KEY_IP": 0,
+        "KEY_PORT": 1
+    },
     "capabilities": [
         "configurable"
     ],
